# terminalist

./: .editorconfig  .gitignore  BACKEND_REFACTOR_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIALOGS.md  LICENSE  Makefile  PKGBUILD  RATATUI_ARCHITECTURE_GUIDELINES.md  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONFIG_FILE_FEATURE.md  DEVELOPMENT.md  KEYBOARD_SHORTCUTS.md  PRD.md  README.md
examples/: badge_demo.rs  basic_usage.rs  color_test.rs  interactive_badge_demo.rs  simple_badge_demo.rs  terminal_badge_test.rs
scripts/: demo_data.sql  wezterm_screenshot.lua
src/: backend_registry.rs  badge.rs  config.rs  constants.rs  debug_logger.rs  icons.rs  lib.rs  logger.rs  main.rs  storage.rs  sync.rs  sync_coordinator.rs  terminal_badge.rs  todoist.rs  ui.rs
src/backend/: factory.rs  mod.rs  todoist.rs
src/backends/: mod.rs  registry.rs  todoist.rs
src/entities/: backend.rs  label.rs  mod.rs  project.rs  section.rs  task.rs  task_label.rs
src/repositories/: backend.rs  label.rs  mod.rs  project.rs  section.rs  task.rs
src/storage/: backends.rs  db.rs  labels.rs  mod.rs  projects.rs  sections.rs  tasks.rs
src/sync/: labels.rs  mod.rs  projects.rs  sections.rs  storage.rs  tasks.rs
src/ui/: app.rs  app_component.rs  events.rs  layout.rs  mod.rs  new_renderer.rs  renderer.rs
src/ui/components/: badge.rs  dialog_component.rs  dialogs.rs  help_panel.rs  mod.rs  projects_list.rs  scrollbar_helper.rs  sidebar_component.rs  sidebar_item_component.rs  status_bar.rs  task_list_component.rs  task_list_item_component.rs  tasks_list.rs
src/ui/components/dialogs/: common.rs  debug_dialog.rs  (+18 more)
src/ui/core/: actions.rs  component.rs  context.rs  event_handler.rs  mod.rs  task_manager.rs
src/utils/: color.rs  date.rs  datetime.rs  mod.rs
tests/: config.rs  date_utils_test.rs  icons_test.rs  logger.rs  scrollbar_test.rs  storage.rs  sync.rs  todoist_test.rs  ui.rs  ui_renderer_test.rs  utils.rs
tests/storage/: db.rs  labels.rs  projects.rs  sections.rs  tasks.rs
tests/ui/: app_component.rs  components.rs  core.rs  layout.rs
tests/ui/components/: badge.rs  dialog_component.rs  dialogs.rs  sidebar_component.rs  task_list_component.rs  task_list_item_component.rs
tests/ui/core/: actions.rs  component.rs  context.rs  event_handler.rs  task_manager.rs
tests/utils/: color.rs  datetime.rs
(+5 files in other folders)
