[package]
name = "terminalist"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminalist"
path = "src/main.rs"

[lib]
name = "terminalist"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ratatui = "0.24"
crossterm = "0.27"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
todoist-api = "0.2.0"
