[package]
name = "terminalist"
version = "0.2.0"
edition = "2021"
keywords = ["terminal", "tui", "todoist", "productivity", "cli", "rust", "ratatui", "async"]
description = "A terminal-based Todoist client with modern TUI interface"

[[bin]]
name = "terminalist"
path = "src/main.rs"

[lib]
name = "terminalist"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.29"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
todoist-api = { git = "https://github.com/romaintb/todoist-api", branch = "main" }
