[package]
name = "terminalist"
version = "0.4.0"
edition = "2021"
rust-version = "1.78"
keywords = ["terminal", "tui", "todoist", "productivity", "cli"]
description = "A terminal-based Todoist client with modern TUI interface"
authors = ["Romain Bertrand <romain@doxin.net>"]
license = "MIT"
repository = "https://github.com/romaintb/terminalist"
homepage = "https://github.com/romaintb/terminalist"
readme = "README.md"
categories = ["command-line-utilities"]

[[bin]]
name = "terminalist"
path = "src/main.rs"

[lib]
name = "terminalist"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "2.0"
ratatui = "0.29"
crossterm = "0.29"
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
todoist-api = "0.3.0"
toml = "0.9"
dirs = "6.0"
log = "0.4"
fern = "0.7"
once_cell = "1.19"
uuid = { version = "1.11", features = ["v4", "serde"] }
